# docs/swagger.json
@@ -577,6 +577,12 @@
                 "File_Path": {
                     "type": "string"
                 },
+                "Tagging_User": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "Task_ID": {
                     "type": "string"
                 }
